edición de diseño en footer, y cambio de foto de portada en userprofile

--- a/front_dev/index.html
+++ b/front_dev/index.html
@@ -531,6 +531,7 @@
 
 			</div>
 			<div class="footer">
+				<span class="background-footer"></span>
 				<ul>
 					<li>
 						<h5>BINNDI</h5>
@@ -583,6 +584,7 @@
 					</li>
 
 				</ul>
+				<span class="background-footer background-footer-right"></span>
 			</div>
 			<div id="popup-shadow" class="popup-login">
 				<div class="wrapper-popup-login">
@@ -597,6 +599,30 @@
 						<p class="text-terms-conditions">Al registrarme, acepto <a href="#">Condiciones del servicio</a>, <a href="#">Condiciones sobre pagos</a>, <a href="#">Politica de privacidad y de cookies</a>, <a href="#">Politica de reembolso al cliente</a> y <a href="#">Condiciones de la Garantia</a> en Binndi.</p>
 					</div>
 					
+				</div>
+			</div>
+			<div id="popup-shadow" class="popup-planner">
+				<div class="wrapper-popup-planner">
+					<span class="btn-close btn-close-popup icon-cross"></span>
+					<div class="popup-planner-wrapper-content">
+						<h4>¿Una nueva aventura?</h4>
+						<h4>¡Que emocionante, comencemos!</h4>
+						<form>
+							<div class="input-box">
+								<input type="text" name="" placeholder="Nombre del plan">
+								<span class="icon-bookmark ico"></span>
+							</div>
+							<div class="input-box">
+								<input type="text" name="" placeholder="Invitar amigos">
+								<span class="icon-bookmark ico"></span>
+							</div>
+							<div class="btn">
+								<p>Guardar</p>
+								<span class="icon-bookmark ico"></span>
+							</div>
+							<div class="btn">Cancelar</div>
+						</form>
+					</div>
 				</div>
 			</div>
 			
