landing listo, se quito la seccion de la tecnologia y se apunta todos los estaticos a S3

--- a/front_dev/index.html
+++ b/front_dev/index.html
@@ -614,13 +614,48 @@
 							</div>
 							<div class="input-box">
 								<input type="text" name="" placeholder="Invitar amigos">
-								<span class="icon-bookmark ico"></span>
+								<span class="icon-users ico"></span>
 							</div>
-							<div class="btn">
+							<div class="btnForm">
+								<span></span>
 								<p>Guardar</p>
-								<span class="icon-bookmark ico"></span>
+								<span class="icon-write ico"></span>
 							</div>
-							<div class="btn">Cancelar</div>
+							<div class="btnCancel">Cancelar</div>
+						</form>
+					</div>
+				</div>
+			</div>
+			<div id="popup-shadow" class="popup-planner-fly">
+				<div class="wrapper-popup-planner-fly">
+					<span class="icon-arrow-left-thick btnBack"></span>
+					<span class="btn-close btn-close-popup icon-cross"></span>
+					<div class="popup-planner-wrapper-content-fly">
+						<h4>Comencemos con lo básico</h4>
+						<h4>para ofrecerte lo mejor.</h4>
+						<form>
+							<div class="input-box">
+								<input type="text" name="" placeholder="Busca tu destino">
+								<span class="icon-map-marker ico"></span>
+							</div>
+							<div class="input-box">
+								<input type="text" name="" placeholder="Check-in">
+								<span class="icon-calendar2 ico"></span>
+							</div>
+							<div class="input-box">
+								<input type="text" name="" placeholder="Check-out">
+								<span class="icon-calendar2 ico"></span>
+							</div>
+							<div class="input-box">
+								<input type="text" name="" placeholder="Tipo de hospedaje">
+								<span class="icon-cog ico"></span>
+							</div>
+							<div class="btnForm">
+								<span></span>
+								<p>¡Empezar!</p>
+								<span></span>
+							</div>
+							<div class="btnCancel">Cancelar</div>
 						</form>
 					</div>
 				</div>
