--- a/src/client/index.html
+++ b/src/client/index.html
@@ -10,6 +10,9 @@
 
 </head>
 <body>
+	<script>
+		System.config({ baseURL: '/' });
+	</script>
 	<script src="script/three.min.js"></script>
 	<script src="script/panolens.min.js"></script>
 	<div class="appContainer" id="appContainer">
