--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,6 +7,7 @@
 	<meta charset="utf-8"/>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat|Oxygen:400,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style/app.css">
+	<link rel="icon" type="image/png" href="https://s3-sa-east-1.amazonaws.com/binndi/landing/Favicon_Binndi.png" />
 
 </head>
 <body>
