se agregaron los metas para mostrar info en los post de facebook

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -8,6 +8,11 @@
 	<link href='https://fonts.googleapis.com/css?family=Montserrat|Oxygen:400,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style/app.css">
 	<link rel="icon" type="image/png" href="https://s3-sa-east-1.amazonaws.com/binndi/landing/Favicon_Binndi.png" />
+	<meta property="og:title" content="Binndi - Planifica junto a tus amigos todo tu viaje desde un solo lugar"/>
+	<meta property="og:image" content="https://s3-sa-east-1.amazonaws.com/binndi/landing/Binndi_Logo_header.png"/>
+	<meta property="og:site_name" content="Binndi"/>
+	<meta property="og:description" content="Binndi es una plataforma web que te permite planificar viajes de forma colaborativa eligiendo  transporte, hospedaje y actividades en destino. Re invetamos la forma de explorar el mundo."/>
+
 
 </head>
 <body>
