--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,7 +6,11 @@
 	<meta name="description" content="Binndi es una plataforma web que te permite planificar viajes de forma colaborativa eligiendo  transporte, hospedaje y actividades en destino. Re invetamos la forma de explorar el mundo."/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 	<meta charset="utf-8"/>
-	<meta property="og:image" content="/style/img-sn/binndi-viajes.png" />
+	<meta property="og:image" content="https://s3-sa-east-1.amazonaws.com/binndi/landing/binndi-viajes.png" />
+	<meta property="og:title" content="Binndi - Planifica junto a tus amigos todo tu viaje desde un solo lugar" />
+	<meta property="og:description" content="Binndi es una plataforma web que te permite planificar viajes de forma colaborativa eligiendo  transporte, hospedaje y actividades en destino. Re invetamos la forma de explorar el mundo." />
+	<meta property="og:url" content="http://www.binndi.com" />
+	<meta property="fb:app_id" content="386640188351304" />
 	<link href='https://fonts.googleapis.com/css?family=Montserrat|Oxygen:400,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style/app.css">
 	<link rel="icon" type="image/png" href="https://s3-sa-east-1.amazonaws.com/binndi/landing/Favicon_Binndi.png" />
